--- a/20190517/HabibAlizadaU1M2L8PBD/pom.xml
+++ b/20190517/HabibAlizadaU1M2L8PBD/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.trilogy</groupId>
-    <artifactId>BabyNim</artifactId>
+    <artifactId>HabibAlizadaU1M2L8PBD</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
