--- a/HabibAlizadaU2M2Summative/post-service.properties
+++ b/HabibAlizadaU2M2Summative/post-service.properties
@@ -1,4 +1,4 @@
-# this is the port on which our book-service will run
+# this is the port on which our post-service will run
 server.port=4242
 
 # allow for RefreshScope
