--- a/HabibAlizadaU2M2Summative/comment-service.properties
+++ b/HabibAlizadaU2M2Summative/comment-service.properties
@@ -1,4 +1,4 @@
-# this is the port on which our note-service will run
+# this is the port on which our comment-service will run
 server.port=1984
 
 # allow for RefreshScope
