--- a/HabibAlizadaU2M2Summative/comment-queue-consumer.properties
+++ b/HabibAlizadaU2M2Summative/comment-queue-consumer.properties
@@ -1,4 +1,4 @@
-# this is the port on which our note-queue-consumer will run
+# this is the port on which our comment-queue-consumer will run
 server.port=7878
 
 # allow for RefreshScope
