--- a/HabibAlizadaU2M2Summative/comment-service/src/main/resources/application.properties
+++ b/HabibAlizadaU2M2Summative/comment-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url: jdbc:mysql://localhost:3306/comment?useSSL=false
+spring.datasource.username: root
+spring.datasource.password: s09c12
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
