--- a/HabibAlizadaU2M2Summative/post-service/src/main/resources/application.properties
+++ b/HabibAlizadaU2M2Summative/post-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url: jdbc:mysql://localhost:3306/post?useSSL=false
+spring.datasource.username: root
+spring.datasource.password: s09c12
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
