--- a/HabibAlizadaU2M2Summative/comment-queue-consumer/pom.xml
+++ b/HabibAlizadaU2M2Summative/comment-queue-consumer/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.7.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.9.9</version>
+		</dependency>
 
 	</dependencies>
 
