--- a/HabibAlizadaU2M2Summative/comment-service/pom.xml
+++ b/HabibAlizadaU2M2Summative/comment-service/pom.xml
@@ -78,6 +78,15 @@
 			<version>2.9.9</version>
 		</dependency>
 
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-cache</artifactId>-->
+<!--			<version>2.1.6.RELEASE</version>-->
+<!--		</dependency>-->
+
+
+
 	</dependencies>
 
 	<dependencyManagement>
